
2020-06-20  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y (emit_entry): added parameter for main program as pending
	  (FR #357).

2020-06-18  Edward Hart <edward.dan.hart@gmail.com>

	* codegen.c (output_local_fields): fixed bug #648, where variable length
	  parameters' were not cached when the unrelated local_field_cache was
	  empty.
	* codegen.c: minor refactoring of duplicated code.

2020-06-06  Ron Norman <rjn@inglenet.com>
	* codegen.c: Changes to module entry to better handle
			C mod calls COBOL mod calls C mod calls COBOL mod

2020-06-03  Ron Norman <rjn@inglenet.com>

	* tree.c, typeck.c: fixed code for 'arithmetic-osvs' option
	  which computes intermediate results similar to IBM OSVS & MVS
	  It should take the largest decimal position usage in expression

2020-05-26  Ron Norman <rjn@inglenet.com>
	* codegen.c: In output_local_field_cache if REPORT field
			then use output_emit_field 

2020-05-06  Ron Norman <rjn@inglenet.com>
	* cobc.c: Added -G to experiment with 'gdb' and COBOL source
			This is experimental and not for production.
	* codegen.c: Added code to emit #line with reference only to
			the COBOL source code. 
			'gdb' sort of works but not good enough yet

2020-05-05  Ron Norman <rjn@inglenet.com>
	* flag.def, cobc.c, codegen.c: removed -fif-cutoff completely

2020-04-27  Ron Norman <rjn@inglenet.com>
	* codeoptim.def,codeoptim.c: Add COB_A_INLINE to new routines 
				to convert DISPLAY into binary values
	* codegen.c,typeck.c: Additional refinements to computing 
				integer expressions faster. Now includes BINARY data
				fields even on little endian systems.

2020-04-26  Ron Norman <rjn@inglenet.com>
	* codeoptim.def,codeoptim.c: New routines to convert DISPLAY into
				binary values
	* codegen.c: Use new get_numdisps/64/s64 routines
	* typeck.c: Check for integer expression and emit faster arithmetic
			code by using the C language to do the arithmetic
	* flag.def: New flag -fno-fast-math to disable these changes