@@ -7730,6 +7730,10 @@ output_ec_condition_for_handler (const enum cb_handler_type handler_type)
 		output_level_2_ex_condition (COB_EC_JSON);
 		break;
 
+	case DELETE_FILE_HANDLER:
+		output_level_2_ex_condition (COB_EC_DELETE_FILE);
+		break;
+
 	/* LCOV_EXCL_START */
 	default:
 		cobc_err_msg (_("unexpected handler type: %d"), (int) handler_type);
