@@ -462,6 +462,14 @@ COB_EXCEPTION  (1700, COB_EC_JSON,
 COB_EXCEPTION  (1710, COB_EC_JSON_IMP,
 		"EC-JSON-IMP", 1)
 
+/* DELETE FILE exception */
+COB_EXCEPTION  (1800, COB_EC_DELETE_FILE,
+		"EC-DELETE-FILE", 0)
+
+/* DELETE FILE exception */
+COB_EXCEPTION  (1810, COB_EC_DELETE_FILE_IMP,
+		"EC-DELETE-FILE-IMP", 0)
+
 
 /* Overflow condition */
 COB_EXCEPTION  (0A00, COB_EC_OVERFLOW,
